name:                icalendar-gogol
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/icalendar-gogol#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            Network, Google, Calendar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
      base >= 4.7 && < 5
    , gogol-apps-calendar
    , iCalendar
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/icalendar-gogol
